added default load settings

--- a/cart.html
+++ b/cart.html
@@ -107,7 +107,7 @@
                                             <div>
                                                 <a href="#!" type="button" class="rm-btn-1 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                   class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                                                <a href="#!" type="button" class="card-link-secondary small text-uppercase"><i
+                                                <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
                                   class="fas fa-heart mr-1"></i> Move to wish list </a>
                                             </div>
                                             <p class="mb-0"><span><strong id="summary">$25.00</strong></span></p class="mb-0">
@@ -118,11 +118,9 @@
                             <!--------------->
 
                             <!-- Cart Item 2 -->
-                            <hr class="mb-4">
+                            <hr class="mb-4 hide-hr-2">
                             <div class="mb-3">
                                 <div class="pt-4 wish-list">
-
-
 
                                     <div class="row mb-4 hide-item-2">
                                         <div class="col-md-5 col-lg-3 col-xl-3">
@@ -131,7 +129,7 @@
 
                                             </div>
                                         </div>
-                                        <div class="col-md-7 col-lg-9 col-xl-9 hidetest3">
+                                        <div class="col-md-7 col-lg-9 col-xl-9">
                                             <div>
                                                 <div class="d-flex justify-content-between">
                                                     <div>
@@ -152,9 +150,9 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-center">
                                                     <div>
-                                                        <a href="#!" type="button" class="rm-btn-3 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
+                                                        <a href="#!" type="button" class="rm-btn-2 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                           class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                                                        <a href="#!" type="button" class="card-link-secondary small text-uppercase"><i
+                                                        <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
                                           class="fas fa-heart mr-1"></i> Move to wish list </a>
                                                     </div>
                                                     <p class="mb-0"><span><strong id="summary">$30.00</strong></span></p class="mb-0">
@@ -167,20 +165,19 @@
                             <!--------------->
 
                             <!-- Cart Item 3 -->
-                            <hr class="mb-4">
+                            <hr class="mb-4 hide-hr-3">
                             <div class="mb-3">
                                 <div class="pt-4 wish-list">
 
 
-
-                                    <div class="row mb-4 hide-item-2">
+                                    <div class="row mb-4 hide-item-3">
                                         <div class="col-md-5 col-lg-3 col-xl-3">
                                             <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
                                                 <img class="img-fluid w-100" src="images/SQL_Programming_For_Beginners.png" alt="SQL_Programming_For_Beginners">
 
                                             </div>
                                         </div>
-                                        <div class="col-md-7 col-lg-9 col-xl-9 hidetest2">
+                                        <div class="col-md-7 col-lg-9 col-xl-9">
                                             <div>
                                                 <div class="d-flex justify-content-between">
                                                     <div>
@@ -201,9 +198,9 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-center">
                                                     <div>
-                                                        <a href="#!" type="button" class="rm-btn-2 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
+                                                        <a href="#!" type="button" class="rm-btn-3 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                           class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                                                        <a href="#!" type="button" class="card-link-secondary small text-uppercase"><i
+                                                        <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
                                           class="fas fa-heart mr-1"></i> Move to wish list </a>
                                                     </div>
                                                     <p class="mb-0"><span><strong id="summary">$25.00</strong></span></p class="mb-0">
@@ -216,20 +213,20 @@
                             <!--------------->
 
                             <!-- Cart Item 4 -->
-                            <hr class="mb-4">
+                            <hr class="mb-4 hide-hr-4">
                             <div class="mb-3">
                                 <div class="pt-4 wish-list">
 
 
 
-                                    <div class="row mb-4 hide-item-2">
+                                    <div class="row mb-4 hide-item-4">
                                         <div class="col-md-5 col-lg-3 col-xl-3">
                                             <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
                                                 <img class="img-fluid w-100" src="images/Database_Management_System.jpg" alt="Database_Management_System">
 
                                             </div>
                                         </div>
-                                        <div class="col-md-7 col-lg-9 col-xl-9 hidetest2">
+                                        <div class="col-md-7 col-lg-9 col-xl-9">
                                             <div>
                                                 <div class="d-flex justify-content-between">
                                                     <div>
@@ -250,9 +247,9 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-center">
                                                     <div>
-                                                        <a href="#!" type="button" class="rm-btn-2 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
+                                                        <a href="#!" type="button" class="rm-btn-4 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                           class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                                                        <a href="#!" type="button" class="card-link-secondary small text-uppercase"><i
+                                                        <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
                                           class="fas fa-heart mr-1"></i> Move to wish list </a>
                                                     </div>
                                                     <p class="mb-0"><span><strong id="summary">$25.00</strong></span></p class="mb-0">
@@ -265,20 +262,20 @@
                             <!--------------->
 
                             <!-- Cart Item 5 -->
-                            <hr class="mb-4">
+                            <hr class="mb-4 hide-hr-5">
                             <div class="mb-3">
                                 <div class="pt-4 wish-list">
 
 
 
-                                    <div class="row mb-4 hide-item-2">
+                                    <div class="row mb-4 hide-item-5">
                                         <div class="col-md-5 col-lg-3 col-xl-3">
                                             <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
                                                 <img class="img-fluid w-100" src="images/Sql_Database_Programming.jpg" alt="Sql_Database_Programming">
 
                                             </div>
                                         </div>
-                                        <div class="col-md-7 col-lg-9 col-xl-9 hidetest2">
+                                        <div class="col-md-7 col-lg-9 col-xl-9">
                                             <div>
                                                 <div class="d-flex justify-content-between">
                                                     <div>
@@ -299,9 +296,9 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-center">
                                                     <div>
-                                                        <a href="#!" type="button" class="rm-btn-2 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
+                                                        <a href="#!" type="button" class="rm-btn-5 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                           class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                                                        <a href="#!" type="button" class="card-link-secondary small text-uppercase"><i
+                                                        <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
                                           class="fas fa-heart mr-1"></i> Move to wish list </a>
                                                     </div>
                                                     <p class="mb-0"><span><strong id="summary">$30.00</strong></span></p class="mb-0">
@@ -314,20 +311,18 @@
                             <!--------------->
 
                             <!-- Cart Item 6 -->
-                            <hr class="mb-4">
+                            <hr class="mb-4 hide-hr-6">
                             <div class="mb-3">
                                 <div class="pt-4 wish-list">
 
-
-
-                                    <div class="row mb-4 hide-item-2">
+                                    <div class="row mb-4 hide-item-6">
                                         <div class="col-md-5 col-lg-3 col-xl-3">
                                             <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
                                                 <img class="img-fluid w-100" src="images/Essentials_of_Web_Database_Development.png" alt="Essentials_of_Web_Database_Development">
 
                                             </div>
                                         </div>
-                                        <div class="col-md-7 col-lg-9 col-xl-9 hidetest2">
+                                        <div class="col-md-7 col-lg-9 col-xl-9">
                                             <div>
                                                 <div class="d-flex justify-content-between">
                                                     <div>
@@ -348,9 +343,9 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-center">
                                                     <div>
-                                                        <a href="#!" type="button" class="rm-btn-2 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
+                                                        <a href="#!" type="button" class="rm-btn-6 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                           class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                                                        <a href="#!" type="button" class="card-link-secondary small text-uppercase"><i
+                                                        <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
                                           class="fas fa-heart mr-1"></i> Move to wish list </a>
                                                     </div>
                                                     <p class="mb-0"><span><strong id="summary">$25.00</strong></span></p class="mb-0">
