updated merge with main

--- a/check-out.html
+++ b/check-out.html
@@ -77,63 +77,101 @@
                     <h4>Billing Contact</h4>
                 </div>
                 <div class="panel-body">
-                    <div class="form-group">
-                        <div class="col-md-12">
-
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-6 col-xs-12">
+                    <div class="form-group row">
+                        <div class="col-md-3 col-xs-12 ">
                             <strong>First Name:</strong>
                             <input type="text" name="first_name" class="form-control" value="" />
                         </div>
                         <div class="span1"></div>
-                        <div class="col-md-6 col-xs-12">
+                        <div class="col-md-3 col-xs-12 ">
+                            <strong>Last Name:</strong>
+                            <input type="text" name="last_name" class="form-control" value="" />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-6"><strong>Primary Phone Number:</strong></div>
+                        <div class="col-md-6"><input type="text" name="phone_number" class="form-control" value="" /></div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-6"><strong>Alternate Phone Number:</strong></div>
+                        <div class="col-md-6"><input type="text" name="phone_number" class="form-control" value="" /></div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-6"><strong>Email Address:</strong></div>
+                        <div class="col-md-6"><input type="text" name="email_address" class="form-control" value="" /></div>
+                    </div>
+                </div>
+
+
+                <div class="panel-heading">
+                    <h4>Billing Address</h4>
+                </div>
+                <div class="panel-body">
+                    <div class="form-group row">
+                        <div class="col-md-3 col-xs-12 ">
+                            <strong>First Name:</strong>
+                            <input type="text" name="first_name" class="form-control" value="" />
+                        </div>
+                        <div class="span1"></div>
+                        <div class="col-md-3 col-xs-12 ">
                             <strong>Last Name:</strong>
                             <input type="text" name="last_name" class="form-control" value="" />
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-12"><strong>Address:</strong></div>
-                        <div class="col-md-12">
+                        <div class="col-md-6"><strong>Address Line 1:</strong></div>
+                        <div class="col-md-6">
                             <input type="text" name="address" class="form-control" value="" />
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-12"><strong>City:</strong></div>
-                        <div class="col-md-12">
+                        <div class="col-md-6"><strong>Address Line 2:</strong></div>
+                        <div class="col-md-6">
+                            <input type="text" name="address" class="form-control" value="" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-6"><strong>City:</strong></div>
+                        <div class="col-md-6">
                             <input type="text" name="city" class="form-control" value="" />
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div class="col-md-12"><strong>State:</strong></div>
-                        <div class="col-md-12">
-                            <input type="text" name="state" class="form-control" value="" />
+                    <div class="form-group row">
+
+
+                        <div class="col-md-2 col-xs-12">
+                            <input type="text" placeholder="Province" name="Province" class="form-control" value="" />
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12"><strong>Zip / Postal Code:</strong></div>
-                        <div class="col-md-12">
-                            <input type="text" name="zip_code" class="form-control" value="" />
+
+
+
+                        <div class="col-md-2 col-xs-12">
+                            <input type="text" placeholder="country" name="Country" class="form-control" value="" />
                         </div>
+
+
+
+                        <div class="col-md-2 col-xs-12">
+                            <input type="text" placeholder="Postal code" name="Postal_code" class="form-control" value="" />
+                        </div>
+
                     </div>
-                    <div class="form-group">
-                        <div class="col-md-12"><strong>Phone Number:</strong></div>
-                        <div class="col-md-12"><input type="text" name="phone_number" class="form-control" value="" /></div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12"><strong>Email Address:</strong></div>
-                        <div class="col-md-12"><input type="text" name="email_address" class="form-control" value="" /></div>
-                    </div>
+
                 </div>
+
+
+
+                <!----put second here-->
             </div>
 
             <!--SHIPPING METHOD END-->
             <div class="aside">
                 <!--CREDIT CART PAYMENT-->
                 <div class="panel panel-info">
-                    <div class="panel-heading"><span><i class="glyphicon glyphicon-lock"></i></span>Payment Details</div>
+                    <div class="panel-heading"><span><i class="glyphicon glyphicon-lock"></i></span>
+                        <h4>Payment Details</h4>
+                    </div>
                     <div class="panel-body">
                         <div class="form-group">
                             <div class="col-md-12"><strong>Card Type:</strong></div>
@@ -178,17 +216,17 @@
                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                 <select class="form-control" name="">
                                         <option value="">Year</option>
-                                        <option value="2015">2015</option>
-                                        <option value="2016">2016</option>
-                                        <option value="2017">2017</option>
-                                        <option value="2018">2018</option>
-                                        <option value="2019">2019</option>
-                                        <option value="2020">2020</option>
-                                        <option value="2021">2021</option>
-                                        <option value="2022">2022</option>
-                                        <option value="2023">2023</option>
-                                        <option value="2024">2024</option>
-                                        <option value="2025">2025</option>
+                                        <option value="2015">2020</option>
+                                        <option value="2016">2021</option>
+                                        <option value="2017">2022</option>
+                                        <option value="2018">2023</option>
+                                        <option value="2019">2024</option>
+                                        <option value="2020">2025</option>
+                                        <option value="2021">2026</option>
+                                        <option value="2022">2027</option>
+                                        <option value="2023">2028</option>
+                                        <option value="2024">2029</option>
+                                        <option value="2025">2030</option>
                                 </select>
                             </div>
                         </div>
@@ -205,18 +243,81 @@
                                 <div class="clearfix"></div>
                             </div>
                         </div>
+
+                    </div>
+                    <div class="panel-heading">
+                        <h4>Shipping Address</h4>
+                    </div>
+                    <div class="panel-body">
                         <div class="form-group">
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                                <button type="submit" class="btn btn-primary btn-submit-fix">Place Order</button>
+                            <div class="col-md-12">
+
                             </div>
                         </div>
+
+                        <div class="form-group ">
+                            <div class="col-md-6 col-xs-12">
+                                <strong>First Name:</strong>
+                                <input type="text" name="first_name" class="form-control" value="" />
+                            </div>
+                            <div class="span1"></div>
+                            <div class="col-md-6 col-xs-12">
+                                <strong>Last Name:</strong>
+                                <input type="text" name="last_name" class="form-control" value="" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-12"><strong>Address Line 1:</strong></div>
+                            <div class="col-md-12">
+                                <input type="text" name="address" class="form-control" value="" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-12"><strong>Address Line 2:</strong></div>
+                            <div class="col-md-12">
+                                <input type="text" name="address" class="form-control" value="" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-12"><strong>City:</strong></div>
+                            <div class="col-md-12">
+                                <input type="text" name="city" class="form-control" value="" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-12"><strong>Province</strong></div>
+                            <div class="col-md-12">
+                                <input type="text" name="Province" class="form-control" value="" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-12"><strong>Country</strong></div>
+                            <div class="col-md-12">
+                                <input type="text" name="Country" class="form-control" value="" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-12"><strong>Postal Code:</strong></div>
+                            <div class="col-md-12">
+                                <input type="text" name="Postal_code" class="form-control" value="" />
+                            </div>
+                        </div>
+
                     </div>
                 </div>
+                <!---panel end-->
+            </div>
+            <!---aside end-->
+        </div>
+        <hr>
+        <div class="form-group">
+            <div class="col-md-6 col-sm-6 col-xs-12">
+                <button type="submit" class="btn btn-primary btn-submit-fix">Pay now</button>
             </div>
         </div>
         <!--CREDIT CART PAYMENT END-->
     </div>
-    </div>
+    <!---container end-->
     <!-- Footer -->
     <footer>
         <div class="container">
