Added add statements

--- a/books.html
+++ b/books.html
@@ -200,7 +200,7 @@
                 <div class="card-body">
                   <h6 class="card-title">Coding for Beginners</h6>
                   <p class="card-text">$25</p>
-                  <a href="#" class="btn btn-primary add-btn-1">Add to Cart</a>
+                  <a href="#" id="add-btn-1" class="btn btn-primary" >Add to Cart</a>
                 </div>
                 <a
                   href="#!"
@@ -218,8 +218,7 @@
                 <div class="card-body">
                   <h6 class="card-title">Javascript for Beginners</h6>
                   <p class="card-text">$30</p>
-                  <a href="#" type="button" class="btn btn-primary add-btn-2"
-                    >Add to Cart</a
+                  <a href="#" type="button" id="add-btn-2" class="btn btn-primary" >Add to Cart</a
                   >
                 </div>
               </div>
@@ -232,7 +231,7 @@
                 <div class="card-body">
                   <h6 class="card-title">SQL Programming For Beginners</h6>
                   <p class="card-text">$25</p>
-                  <a href="#" class="btn btn-primary">Add to Cart</a>
+                  <a href="#" id="add-btn-3" class="btn btn-primary" >Add to Cart</a>
                 </div>
               </div>
             </div>
@@ -254,7 +253,7 @@
                 <div class="card-body">
                   <h6 class="card-title">Database Management System</h6>
                   <p class="card-text">$25</p>
-                  <a href="#" class="btn btn-primary add-btn-4">Add to Cart</a>
+                  <a href="#" id="add-btn-4" class="btn btn-primary" >Add to Cart</a>
                 </div>
               </div>
               <div class="card">
@@ -266,7 +265,7 @@
                 <div class="card-body">
                   <h6 class="card-title">SQL Database Programming</h6>
                   <p class="card-text">$30</p>
-                  <a href="#" class="btn btn-primary add-btn-5">Add to Cart</a>
+                  <a href="#" id="add-btn-5" class="btn btn-primary" >Add to Cart</a>
                 </div>
               </div>
               <div class="card">
@@ -280,7 +279,7 @@
                     >Essential of Web Database Development</h6
                   >
                   <p class="card-text">$25</p>
-                  <a href="#" class="btn btn-primary add-btn-6">Add to Cart</a>
+                  <a href="#" id="add-btn-6" class="btn btn-primary" >Add to Cart</a>
                 </div>
               </div>
             </div>
