--- a/cart.html
+++ b/cart.html
@@ -104,7 +104,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <div>
-                                                <a href="#!" type="button" class="rm-btn-1 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
+                                                <a href="#!" type="button" id="rm-btn-1" class="btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                   class="fas fa-trash-alt mr-1"></i> Remove item </a>
                                                 <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
                                   class="fas fa-heart mr-1"></i> Move to wish list </a>
@@ -149,7 +149,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-center">
                                                     <div>
-                                                        <a href="#!" type="button" class="rm-btn-2 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
+                                                        <a href="#!" type="button" id="rm-btn-2" class="btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                           class="fas fa-trash-alt mr-1"></i> Remove item </a>
                                                         <a href="#!" type="button" class="add-btn-1 btn btn-secondary card-link-secondary small text-uppercase"><i
                                           class="fas fa-heart mr-1"></i> Move to wish list </a>
@@ -196,7 +196,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-center">
                                                     <div>
-                                                        <a href="#!" type="button" class="rm-btn-3 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
+                                                        <a href="#!" type="button" id="rm-btn-3" class="btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                           class="fas fa-trash-alt mr-1"></i> Remove item </a>
                                                         <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
                                           class="fas fa-heart mr-1"></i> Move to wish list </a>
@@ -245,7 +245,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-center">
                                                     <div>
-                                                        <a href="#!" type="button" class="rm-btn-4 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
+                                                        <a href="#!" type="button" id="rm-btn-4" class="btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                           class="fas fa-trash-alt mr-1"></i> Remove item </a>
                                                         <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
                                           class="fas fa-heart mr-1"></i> Move to wish list </a>
@@ -294,7 +294,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-center">
                                                     <div>
-                                                        <a href="#!" type="button" class="rm-btn-5 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
+                                                        <a href="#!" type="button" id="rm-btn-5" class="btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                           class="fas fa-trash-alt mr-1"></i> Remove item </a>
                                                         <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
                                           class="fas fa-heart mr-1"></i> Move to wish list </a>
@@ -341,7 +341,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-center">
                                                     <div>
-                                                        <a href="#!" type="button" class="rm-btn-6 btn btn-danger card-link-secondary small text-uppercase mr-3"><i
+                                                        <a href="#!" type="button" id="rm-btn-6" class="btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                           class="fas fa-trash-alt mr-1"></i> Remove item </a>
                                                         <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
                                           class="fas fa-heart mr-1"></i> Move to wish list </a>
@@ -362,9 +362,19 @@
                     <!-- Card -->
                     <div class="mb-3 shipDateItem">
                         <div class="pt-4">
-
                             <h5 class="mb-4">Expected shipping delivery</h5>
-
+                            <!-- Temporary Code to test -->
+                            <input type="text" id="cart1" size ="12" value="">
+                            <br>
+                            <input type="text" id="cart2" size ="12" value="">
+                            <br>
+                            <input type="text" id="cart3" size ="12" value="">
+                            <br>
+                            <input type="text" id="cart4" size ="12" value="">
+                            <br>
+                            <input type="text" id="cart5" size ="12" value="">
+                            <br>
+                            <input type="text" id="cart6" size ="12" value="">
                             <p class="mb-0"> Thu., 12.03. - Mon., 16.03.</p>
                         </div>
                     </div>
