Fixed problem with button 5

--- a/books.html
+++ b/books.html
@@ -200,14 +200,22 @@
                 <div class="card-body">
                   <h6 class="card-title">Coding for Beginners</h6>
                   <p class="card-text">$25</p>
-                  <a href="#" id="add-btn-1" class="btn btn-primary" >Add to Cart</a>
+                  <a
+                    href="#"
+                    type="button"
+                    id="add-btn-1"
+                    class="btn btn-primary"
+                    >Add to Cart</a
+                  >
+                  <!-- Remove code below after test -->
+                  <!-- <a
+                    href="#!"
+                    type="button"
+                    id="add-btn-1"
+                    class="btn btn-danger card-link-secondary small text-uppercase mr-3"
+                    ><i class="fas fa-trash-alt mr-1"></i> Remove item
+                  </a> -->
                 </div>
-                <a
-                  href="#!"
-                  type="button"
-                  class="add-btn-1 btn btn-secondary card-link-secondary small text-uppercase"
-                  ><i class="fas fa-heart mr-1"></i> Move to wish list
-                </a>
               </div>
               <div class="card">
                 <img
@@ -218,7 +226,12 @@
                 <div class="card-body">
                   <h6 class="card-title">Javascript for Beginners</h6>
                   <p class="card-text">$30</p>
-                  <a href="#" type="button" id="add-btn-2" class="btn btn-primary" >Add to Cart</a
+                  <a
+                    href="#"
+                    type="button"
+                    id="add-btn-2"
+                    class="btn btn-primary"
+                    >Add to Cart</a
                   >
                 </div>
               </div>
@@ -231,7 +244,16 @@
                 <div class="card-body">
                   <h6 class="card-title">SQL Programming For Beginners</h6>
                   <p class="card-text">$25</p>
-                  <a href="#" id="add-btn-3" class="btn btn-primary" >Add to Cart</a>
+                  <a href="#" id="add-btn-3" class="btn btn-primary"
+                    >Add to Cart</a
+                  >
+                  <a
+                    href="#!"
+                    id="add-btn-5"
+                    type="button"
+                    class="btn btn-secondary card-link-secondary small text-uppercase"
+                    ><i class="fas fa-heart mr-1"></i> Move to wish list
+                  </a>
                 </div>
               </div>
             </div>
@@ -253,7 +275,9 @@
                 <div class="card-body">
                   <h6 class="card-title">Database Management System</h6>
                   <p class="card-text">$25</p>
-                  <a href="#" id="add-btn-4" class="btn btn-primary" >Add to Cart</a>
+                  <a href="#" id="add-btn-4" class="btn btn-primary"
+                    >Add to Cart</a
+                  >
                 </div>
               </div>
               <div class="card">
@@ -265,7 +289,9 @@
                 <div class="card-body">
                   <h6 class="card-title">SQL Database Programming</h6>
                   <p class="card-text">$30</p>
-                  <a href="#" id="add-btn-5" class="btn btn-primary" >Add to Cart</a>
+                  <a href="#" id="add-btn-5" class="btn btn-primary"
+                    >Add to Cart</a
+                  >
                 </div>
               </div>
               <div class="card">
@@ -279,7 +305,9 @@
                     >Essential of Web Database Development</h6
                   >
                   <p class="card-text">$25</p>
-                  <a href="#" id="add-btn-6" class="btn btn-primary" >Add to Cart</a>
+                  <a href="#" id="add-btn-6" class="btn btn-primary"
+                    >Add to Cart</a
+                  >
                 </div>
               </div>
             </div>
@@ -290,6 +318,18 @@
         <!-- Book Main Content -->
       </div>
       <!-- End of Row -->
+      <!-- Temporary Code to test -->
+      <input type="text" id="cart1" size="12" value="" />
+      <br />
+      <input type="text" id="cart2" size="12" value="" />
+      <br />
+      <input type="text" id="cart3" size="12" value="" />
+      <br />
+      <input type="text" id="cart4" size="12" value="" />
+      <br />
+      <input type="text" id="cart5" size="12" value="" />
+      <br />
+      <input type="text" id="cart6" size="12" value="" />
     </main>
     <!-- End of Container -->
 
