--- a/cart.html
+++ b/cart.html
@@ -106,7 +106,7 @@
                                             <div>
                                                 <a href="#!" type="button" id="rm-btn-1" class="btn btn-danger card-link-secondary small text-uppercase mr-3"><i
                                   class="fas fa-trash-alt mr-1"></i> Remove item </a>
-                                                <a href="#!" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
+                                                <a href="#!" id="add-btn-5" type="button" class="btn btn-secondary card-link-secondary small text-uppercase"><i
                                   class="fas fa-heart mr-1"></i> Move to wish list </a>
                                             </div>
                                             <p class="mb-0"><span><strong id="summary">$25.00</strong></span></p class="mb-0">
